c2dascript-transpile/tests/snapshots/snapshots__transpile@varargs.c.x86_64.linux.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arch-os-specific/varargs.das
---
options gen2

def c2da_min_int(a : int; b : int) : int {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int(a : int; b : int) : int {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint(a : uint; b : uint) : uint {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint(a : uint; b : uint) : uint {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_int64(a : int64; b : int64) : int64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_int64(a : int64; b : int64) : int64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_min_uint64(a : uint64; b : uint64) : uint64 {
    if (a < b) {
        return a
    } else {
        return b
    }
}
def c2da_max_uint64(a : uint64; b : uint64) : uint64 {
    if (a > b) {
        return a
    } else {
        return b
    }
}
def c2da_clip_uint(v : int) : uint {
    if (v < 0) {
        return 0x0
    }
    if (v > 255) {
        return 0xff
    }
    return uint(v)
}
def c2da_bool_to_uint(v : bool) : uint {
    if (v) {
        return 0x1
    } else {
        return 0x0
    }
}
def c2da___assert_fail(expr : void?; file : void?; line : uint; func : void?) {
}
struct c2da___va_list_tag {
    gp_offset : uint
    fp_offset : uint
    overflow_arg_area : uint64
    reg_save_area : uint64
}
typedef va_list = array<c2da___va_list_tag>
typedef size_t = uint64
struct vastruct {
    args : va_list
}
[export]
def call_printf() {
    printf(unsafe(addr("%d, %f
"[0])), 10, double(1.5))
}
[export]
def my_vprintf(var format : int8 const?; var ap : c2da___va_list_tag?) {
    vprintf(format, ap)
}

[export] def main() : int {
    return 0
}
